--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 * {
-margin: 0;
-padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body{
-font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto Slab', serif;
 }
 
 .first-section{
-background-color: #1f2937;
+    background-color: #1f2937;
 
 }
 
 #header-logo{
-font-size: 24px;
-color: #f9faf8; 
+    font-size: 24px;
+    color: #f9faf8; 
+    margin-right: 165px;
 }
 
 .header-link{
-font-size: 18px;
-color: #e5e7eb;
-margin: 10px;
+    font-size: 18px;
+    color: #e5e7eb;
+    margin: 10px;
 }
 
 .navbar{
-display: flex;
-flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 ul{
-display: flex;
-flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
-.navbar-left, .navbar-right{
-display: flex;
-width: 50%;
-justify-content: center;
-align-items: center;
+.navbar-left{
+    display: flex;
+    width: 50%;
+    justify-content:space-around;
+}
+
+.navbar-right{
+    display: flex;
+    width: 50%;
+    justify-content: center;
 }
 
 h1{
@@ -51,13 +57,47 @@ h1{
 .content{
     display: flex;
     flex-direction: row;
+    margin: 50px;
 }
 
-.content-left, .content-right{
+.content-right{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 50%;
 }
 
+.content-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    margin-left: 125px;
+    margin-bottom: 50px;
+}
+
+img{
+    margin-top: 35px;
+    width: 450px;
+    height: 250px;
+    margin-bottom: 90px;
+    
+}
+
+.p-first{
+    font-size: 18px;    
+    color: #e5e7eb;
+    
+}
+
+.sign-up-first-section{
+    background-color: #3882f6;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border: 1px #3882f6;
+    border-radius: 8px;
+    margin-top: 8px;
+}
 
