--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,35 @@ img{
     margin-top: 8px;
 }
 
+h2{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.row-of-blue-divs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 100px;
+    align-items: center;
+}
+
+.box-blue{
+    border: 3px solid #3882f6;
+    width: 200px;
+    height: 200px;
+    border-radius: 15px;
+}
+
+.p-second{
+    text-align: center;
+    font-size: 18px;
+}
+
+
+
+
+
