--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,30 @@ h2{
     font-size: 18px;
 }
 
+.third-section{
+    background-color: #e5e7eb;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 
+h3{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 500;
+    color: #1f3927;
+    text-align: center;
+}
 
+.p-third{
+    font-size: 18px;
+    text-align: end;
+}
 
+#p-div{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 300px;
+}
 
